@@ -171,7 +171,7 @@ dnl in test.c can be used regardless of which gethostbyname_r
 dnl exists. These example files found at
 dnl http://www.csn.ul.ie/~caolan/publink/gethostbyname_r
 dnl
-dnl @version $Id: acinclude.m4,v 1.13 2002/11/02 07:41:07 freddy77 Exp $
+dnl @version $Id: acinclude.m4,v 1.14 2002/12/06 21:56:56 freddy77 Exp $
 dnl @author Caolan McNamara <caolan@skynet.ie>
 dnl
 dnl based on David Arnold's autoconf suggestion in the threads faq
@@ -322,3 +322,38 @@ malloc_options = "AJR";
   if test $ac_cv_have_malloc_options = yes; then
    AC_DEFINE(HAVE_MALLOC_OPTIONS, 1, [Define to 1 if your system provides the malloc_options variable.])
   fi])
+
+dnl Check getpwuid_r parameters
+
+AC_DEFUN(AC_tds_FUNC_WHICH_GETPWUID_R,
+[AC_CACHE_CHECK(for which type of getpwuid_r, ac_cv_func_which_getpwuid_r, [
+	AC_TRY_COMPILE([
+#include <unistd.h>
+#include <pwd.h>
+  	], 	[
+struct passwd *pw, bpw;
+char buf[1024];
+pw = getpwuid_r(getuid(), &bpw, buf, sizeof(buf));
+
+],ac_cv_func_which_getpwuid_r=four, 
+  [
+  AC_TRY_COMPILE([
+#include <unistd.h>
+#include <pwd.h>
+  ], [
+struct passwd *pw, bpw;
+char buf[1024];
+getpwuid_r(getuid(), &bpw, buf, sizeof(buf), &pw);
+],ac_cv_func_which_getpwuid_r=five,
+ac_cv_func_which_getpwuid_r=no)
+
+]
+) 
+])
+
+if test $ac_cv_func_which_getpwuid_r = four; then
+  AC_DEFINE(HAVE_FUNC_GETPWUID_R_4, 1, [Define to 1 if your system provides the 4-parameter version of getpwuid_r().])
+elif test $ac_cv_func_which_getpwuid_r = five; then
+  AC_DEFINE(HAVE_FUNC_GETPWUID_R_5, 1, [Define to 1 if your system provides the 5-parameter version of getpwuid_r().])
+fi
+])
