@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 
 dnl ------------------------------------------------------------
-dnl $Id: configure.in,v 1.76 2002/11/16 15:21:12 freddy77 Exp $
+dnl $Id: configure.in,v 1.77 2002/12/06 21:56:56 freddy77 Exp $
 dnl If you're trying to create a new configure test, try
 dnl
 dnl 	http://autogen.sourceforge.net/conftest.html
@@ -269,6 +269,7 @@ fi
 AC_caolan_FUNC_WHICH_GETHOSTBYNAME_R
 AC_raf_FUNC_WHICH_GETSERVBYNAME_R
 AC_tds_FUNC_WHICH_GETHOSTBYADDR_R
+AC_tds_FUNC_WHICH_GETPWUID_R
 
 AC_ARG_ENABLE(extra-checks,
   [  --enable-extra-checks   enable extra checks on code])
