@@ -1,3 +1,7 @@
+Fri Dec 06 22:54:54 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
+	* acinclude.m4 configure.in src/tds/threadsafe.c:
+	- fix compile under Solaris
+
 Fri Dec 06 17:51:12 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
 	* include/tds_sysdep_private.h src/odbc/connectparams.c:
 	* src/odbc/convert_sql2string.c src/tds/convert.c:
